// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DetectorDescriptionList render for detector with anomaly values 1`] = `
<dl
  class="euiDescriptionList emotion-euiDescriptionList-column-left-s-s"
  data-type="column"
  style="grid-template-columns: 15fr 85fr;"
>
  <dt
    class="euiDescriptionList__title emotion-euiDescriptionList__title-column-normal"
  >
    Job ID
  </dt>
  <dd
    class="euiDescriptionList__description emotion-euiDescriptionList__description-column-normal"
  >
    responsetimes
  </dd>
  <dt
    class="euiDescriptionList__title emotion-euiDescriptionList__title-column-normal"
  >
    Detector
  </dt>
  <dd
    class="euiDescriptionList__description emotion-euiDescriptionList__description-column-normal"
  >
    mean response time
  </dd>
  <dt
    class="euiDescriptionList__title emotion-euiDescriptionList__title-column-normal"
  >
    Selected anomaly
  </dt>
  <dd
    class="euiDescriptionList__description emotion-euiDescriptionList__description-column-normal"
  >
    actual 
    <span
      data-test-subj="mockAnomalyValueDisplay"
    >
      50
    </span>
    , typical 
    <span
      data-test-subj="mockAnomalyValueDisplay"
    >
      1.23
    </span>
  </dd>
</dl>
`;

exports[`DetectorDescriptionList render for population detector with no anomaly values 1`] = `
<dl
  class="euiDescriptionList emotion-euiDescriptionList-column-left-s-s"
  data-type="column"
  style="grid-template-columns: 15fr 85fr;"
>
  <dt
    class="euiDescriptionList__title emotion-euiDescriptionList__title-column-normal"
  >
    Job ID
  </dt>
  <dd
    class="euiDescriptionList__description emotion-euiDescriptionList__description-column-normal"
  >
    population
  </dd>
  <dt
    class="euiDescriptionList__title emotion-euiDescriptionList__title-column-normal"
  >
    Detector
  </dt>
  <dd
    class="euiDescriptionList__description emotion-euiDescriptionList__description-column-normal"
  >
    count by status over clientip
  </dd>
</dl>
`;
